# terminal_snake

./: .pre-commit-config.yaml  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml
.github/workflows/: pypi.yaml
bashsnakegame/: colors.py  constants.py  game.py  terminal_arts.py
terminalsnake/: colors.py  game.py
tests/: test_terminalsnake.py
