[tool.poetry]
name = "bashsnakegame"
version = "0.1.1"
description = "A Terminal Snake for Terminal Persons"
authors = ["sakthiRatnam <sakthiratnam050@gmail.com>"]
license = "MIT-LICENSE"
readme = "README.md"
homepage = "https://github.com/sakthiRathinam/gamesortvisualize"
repository = "https://github.com/sakthiRathinam/gamesortvisualize"
documentation = "https://github.com/sakthiRathinam/gamesortvisualize"
keywords = ["terminalsnake", "terminalsnakepython"]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.10"
pytimedinput = "^2.0.1"
colorama = "^0.4.5"
pydantic = "^1.9.1"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
